--- a/themes/hugo-lithium/layouts/_default/single.html
+++ b/themes/hugo-lithium/layouts/_default/single.html
@@ -3,9 +3,10 @@
 <main class="content" role="main">
 
   <article class="article">
-    {{ if eq .Section "post" }}
+    <!-- delete reading time -->
+    <!-- {{ if eq .Section "post" }}
     <span class="article-duration">{{ .ReadingTime }} min read</span>
-    {{ end }}
+    {{ end }} -->
 
     <h1 class="article-title">{{ .Title }}</h1>
 
